# OpenPrey

./: .gitignore  AGENTS.md  BUILDING.md  README.md  TECHNICAL.md  TODO.md  meson.build  repro_cmdtest_tmp.cfg  repro_quick_capture_abs.cfg  repro_roadhouse_quick_probe.cfg
basepy/: meson.build  repro_energynode_biolabsa.cfg
basepy/glprogs/: interaction.vfp  openprey_bloom.fs  openq4_smaa_blend.vfp  openq4_smaa_edge.vfp
basepy/guis/: alarm.gui  bsod.gui  chat.gui  credits.gui  cursor.gui  debugger.gui  dialog_elhuit.gui  elevator.gui  elevator2FloorScript.gui  elevatorcall.gui  eyestalk.gui  forcefield.gui  forcefield_beams.gui  forcefield_off.gui  forcefield_offdim.gui  forcefield_on.gui  generic_1.gui  generic_2.gui  generic_3.gui  generic_unlock_1.gui  generictranslatable.gui  gravity.gui  help.gui  hud.gui  hunterhand.gui  intro.gui  itemcabinet.gui  keycode.gui  keyenter.gui  mphud.gui  mpmain.gui  mpmsgmode.gui  msg.gui  netmenu.gui  nia_trans_d.gui  nodraw_script1.gui  noninteract_a.gui  noninteract_b.gui  noninteract_c.gui  noninteract_e.gui  (+18 more)
basepy/guis/assets/: guicursor_arrow.tga  guicursor_menu.tga  hhead.tga  scrollbar_thumb.tga  scrollbarv.tga  scrollbarv_cap.tga  sliderbackground.tga  sliderbutton.tga
basepy/guis/assets/alarm/: alarm_bg.tga  alarm_bg_rot.tga  alarm_inner.tga  bg.tga  bg2.tga
basepy/guis/assets/arcade/: bsodscreen.tga  button.tga  card.tga  cardscreens.tga  cred_button.tga  cred_button2.tga  fruit.tga  gamelayout.tga  goblin.tga  goblin2.tga  pellet.tga  pellet2.tga  powerup.tga  punkscreen.tga  ragnar.tga  rune.tga  screen_static.tga  slotscreen.tga  standingrag.tga
basepy/guis/assets/bj/: club.tga  deck.tga  diamond.tga  heart.tga  spade.tga
basepy/guis/assets/countdown/: cir2.tga
basepy/guis/assets/credits/: shot1.tga  shot10.tga  shot11.tga  shot12.tga  shot13.tga  shot14.tga  shot15.tga  shot2.tga  shot3.tga  shot4.tga  shot5.tga  shot6.tga  shot7.tga  shot8.tga  shot9.tga
basepy/guis/assets/dialog_elhuit/: bg.tga  bg_earth.tga  bg_keeper.tga  bg_keeper2.tga  bg_keeper2_outline.tga  bg_keeper_outline.tga  bg_main.tga  bg_portal.tga  bg_sphere.tga  bg_sphere_tag.tga  bg_sphere_tag2.tga  bg_spherebg.tga  bg_superportal.tga  bio_1.tga  bio_2.tga  bio_3.tga
basepy/guis/assets/disintegration/: bg.tga
basepy/guis/assets/droid_recharge/: bg.tga  innerbody1.tga  innerbody2.tga  outerbody1.tga  outerbody2.tga  strip.tga  tick1.tga  topshape1.tga  topshape2.tga
basepy/guis/assets/elevator/: bg.tga  button.tga  elevator.tga
basepy/guis/assets/elevator_call/: bg.tga  buttoncall.tga
basepy/guis/assets/eyestalk/: beam1.tga  beam2.tga  beam3.tga  eyestalk.tga
basepy/guis/assets/forcefield/: bar.tga  beam.tga  forcefield.tga
basepy/guis/assets/generator/: bg.tga  generator1.tga  generator2.tga  generator3.tga  lota1.tga  lota2.tga  lota2big.tga
basepy/guis/assets/generic_on_off/: bg.tga  in_1.tga  out.tga  out_ring.tga  tick.tga
basepy/guis/assets/gravity/: bg.tga  butback.tga  button.tga  grav.tga  gravplug.tga  slider.tga  slidereffect.tga
basepy/guis/assets/help/: key.tga  keyhighlighted.tga  spacebar.tga  spacebar_highlight.tga  tab_aqua.tga  tab_blue.tga  tab_green.tga  tab_orange.tga  tab_red.tga  tab_yellow.tga  tabedge_combat.tga  tabedge_look.tga  tabedge_movement.tga  tabedge_multiplayer.tga  tabedge_system.tga  tabedge_weapons.tga  tabedgeactive_combat.tga  tabedgeactive_look.tga  tabedgeactive_movement.tga  tabedgeactive_multiplayer.tga  tabedgeactive_system.tga  tabedgeactive_weapons.tga  tabstrip_combat.tga  tabstrip_look.tga  tabstrip_movement.tga  tabstrip_multiplayer.tga  tabstrip_system.tga  tabstrip_weapons.tga  tabstripactive_combat.tga  tabstripactive_look.tga  tabstripactive_movement.tga  tabstripactive_multiplayer.tga  tabstripactive_system.tga  tabstripactive_weapons.tga
basepy/guis/assets/hhand/: hh_bckgrnd.tga  hh_circle.tga  hh_hand.tga  hh_rotate1.tga  hh_rotate2.tga  hh_rotate3.tga  hh_rotate4.tga  hh_rotate5.tga  hh_rotate6.tga  hh_rotate7.tga  hh_scanline.tga  hh_symbol.tga  hh_triangle.tga
basepy/guis/assets/hideranalyze/: perspective1.tga  perspective2.tga  right1.tga  right2.tga  top1.tga  top2.tga
basepy/guis/assets/hud/: ammo_bar.tga  bossbar.tga  bossbarbg.tga  damagefeedback.tga  feedback_dot.tga  frag.tga  lighter.tga  lighter_bar.tga  lighter_meter_bar.tga  meter_bar.tga  sw_weapon_bg.tga  sw_weapon_bg_corner.tga  sw_weapon_bg_leftcorner.tga  sw_weapon_selector.tga  timer.tga  tommy.tga  tommy_outline.tga  zippo.tga
basepy/guis/assets/item_cabinet/: bg.tga  c1.tga  c2.tga  c3.tga  t1.tga  t2.tga  t3.tga
basepy/guis/assets/jukebox/: 7mary3.tga  blue_oyster_cult.tga  button1.tga  button2.tga  clutch.tga  countdown.tga  driver.tga  edgarwinter.tga  halifax.tga  heart.tga  judas.tga  left_driver.tga  meterholder.tga  mxpx.tga  nugent.tga  railer.tga  scotchgreens.tga  screen.tga  sheepondrugs.tga  sideart.tga  soil.tga  twitcher.tga  twitcherback.tga  twitchscreen.tga
basepy/guis/assets/key_pad/: 1.tga  2.tga  3.tga  4.tga  bg.tga  border.tga  greenline.tga
basepy/guis/assets/loading/: biolabsa.tga  lotaa.tga  (+34 more)
basepy/guis/biolabs/: droid_recharge.gui  hideranalyze2.gui  jennyscan1.gui
basepy/guis/hud/: hud_ammobars.guifragment  hud_damageindictor.guifragment  hud_healthbars.guifragment  hud_itempickups.guifragment  hud_lighter.guifragment  hud_progressbar.guifragment  hud_shuttletips.guifragment  hud_tips.guifragment
basepy/guis/keeperfortress/: lota1.gui
basepy/guis/mainmenu/: mainmenu_credits.guifragment  mainmenu_newgame.guifragment  mainmenu_options.guifragment  mainmenu_quitgame.guifragment  menucolors.guifragment
basepy/guis/roadhouse/: arcade_teaser.gui  jukebox.gui  poker.gui  poker_teaser.gui  tv.gui
basepy/guis/vehicles/: railhud.gui  shuttlehud.gui
basepy/guis/weapons/: auto_cannon.gui  sniperoverlay.gui  soulstripper.gui
basepy/maps/game/: dmtopillogical_4.cm  roadhouse.cm  roadhouse_quick.cm  roadhouse_quick.map  roadhouse_quick.proc
basepy/script/: prey_fades.script
basepy/strings/: english999.lang  french999.lang  italian999.lang  spanish999.lang
(+451 files in other folders)
